--- a/index.html
+++ b/index.html
@@ -90,6 +90,6 @@
 <body>
     <div id="root"></div>
     
-    <script type="text/babel" data-type="module" src="index.tsx"></script>
+    <script type="text/babel" data-type="module" src="index.js"></script>
 </body>
 </html>
