--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Cinzel+Decorative:wght@400;700;900&family=Pirata+One&family=Orbitron:wght@400;700;900&family=MedievalSharp&family=Special+Elite&display=swap" rel="stylesheet">
     <style>
-        html, body { margin: 0; padding: 0; background: #000; overflow: hidden; -webkit-font-smoothing: antialiased; scroll-behavior: smooth; }
+        html, body { margin: 0; padding: 0; background: #000; overflow: hidden; -webkit-font-smoothing: antialiased; }
         #root { height: 100vh; }
         .scroll-container { 
             height: 100vh; 
@@ -16,6 +16,7 @@
             overflow-x: hidden; 
             background: #000; 
             scroll-snap-type: y mandatory; 
+            scroll-behavior: smooth;
         }
         .layer-wrapper { 
             height: 100vh; 
@@ -30,13 +31,14 @@
             width: 100%; 
             overflow: hidden; 
         }
-        ::-webkit-scrollbar { width: 3px; }
+        ::-webkit-scrollbar { width: 4px; }
         ::-webkit-scrollbar-thumb { background: rgba(255,255,255,0.1); border-radius: 10px; }
         
         @keyframes snow-blow {
-            0% { transform: translateY(-10vh) translateX(-20vw) rotate(0deg); opacity: 0; }
-            50% { opacity: 1; }
-            100% { transform: translateY(110vh) translateX(40vw) rotate(360deg); opacity: 0; }
+            0% { transform: translateY(-10vh) translateX(-10vw) rotate(0deg); opacity: 0; }
+            20% { opacity: 1; }
+            80% { opacity: 1; }
+            100% { transform: translateY(110vh) translateX(20vw) rotate(360deg); opacity: 0; }
         }
         @keyframes bubble-rise {
             0% { transform: translateY(110vh) scale(0.5); opacity: 0; }
@@ -45,7 +47,7 @@
         }
         @keyframes mana-spark {
             0%, 100% { opacity: 0; transform: scale(0); }
-            50% { opacity: 1; transform: scale(1.5); }
+            50% { opacity: 0.8; transform: scale(1.2); }
         }
         @keyframes leaf-drift {
             0% { transform: translateY(-10vh) rotate(0deg); opacity: 0; }
@@ -54,24 +56,27 @@
         }
         @keyframes rain-fall {
             0% { transform: translateY(-20vh); opacity: 0; }
-            50% { opacity: 1; }
             100% { transform: translateY(120vh); opacity: 0; }
         }
     </style>
-<script type="importmap">
+    <!-- Babel standalone for browser-side TSX transpilation -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "@google/genai": "https://esm.sh/@google/genai@1.34.0",
+    "lucide-react": "https://esm.sh/lucide-react@0.460.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
 </head>
 <body>
     <div id="root"></div>
-    <script type="module" src="index.tsx"></script>
+    <!-- Use type="text/babel" to ensure Babel transpiles it for GitHub Pages -->
+    <script type="text/babel" data-type="module" src="index.tsx"></script>
 </body>
 </html>
