feat: Configure Babel presets for TypeScript transpilation
Updates the index.html script tag to include `data-presets="react,typescript"`. This allows Babel to correctly transpile TypeScript code alongside React, enabling proper module import handling and improving the development experience for the M-CLEOD Chronicles application.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,12 @@
 </head>
 <body>
     <div id="root"></div>
-    <!-- Use type="text/babel" to ensure Babel transpiles it for GitHub Pages -->
-    <script type="text/babel" data-type="module" src="index.tsx"></script>
+    <!-- 
+      IMPORTANT: 
+      1. type="text/babel" tells Babel to transpile this.
+      2. data-presets="react,typescript" tells Babel which languages to support.
+      3. data-type="module" allows the use of 'import' statements inside the transpiled code.
+    -->
+    <script type="text/babel" data-presets="react,typescript" data-type="module" src="index.tsx"></script>
 </body>
 </html>
